--- a/Home.html
+++ b/Home.html
@@ -19,12 +19,12 @@
 
   <body>
 
-    <div style="height: 10%;">
+    <div style="height: 60px; border-style: solid; position: relative;" >
     <input id="fuzzySearch" type="text" placeholder="Example fuzzy Search" onkeyup="fuzzySearch(this)">
     <div id="dropDown" style="position: absolute;">
     </div>
       </div>
-    <div style="height: auto;">
+    <div style="height: 100%; border-style: solid;">
     </div>
   </body>
 </html>
