--- a/Home2.html
+++ b/Home2.html
@@ -84,7 +84,7 @@
         <button type="button" class="btn btn-lg" style="background-color:white;" id = "findLecturerButton">
           <i class="fa fa-university"></i> Find my lecturer
         </button>
-        <button type="button" class="btn btn-lg" style="background-color:white;" id = "findLecturerButton">
+        <button type="button" class="btn btn-lg" style="background-color:white;" id = "covid">
           <i class="fa fa-lungs-virus"></i> COVID-19
         </button>
       </div>
