added latest news

--- a/Home2.html
+++ b/Home2.html
@@ -60,9 +60,9 @@
 
 
 
-      <div id = "searchdiv" class="form-control mx-sm-3">
+      <div id = "searchdiv" class="form-control mx-sm-3" style="text-align: left">
         
-          <svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
         <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
         </svg>
@@ -70,16 +70,17 @@
         <div id="dropDown">
         </div>
       </div>
-      <div class="container" id="buttons" style="text-align: center">
+      <div class="container" id="buttons" style="text-align: left">
           <button type="button" class="btn btn-primary" id = "blackboardButton">Blackboard</button>
           <button type="button" class="btn btn-primary" id = "evisionButton">E-Vision</button>
           <button type="button" class="btn btn-primary" id = "officeButton">Office 365</button>
           <button type="button" class="btn btn-primary" id = "covidButton">COVID-19</button>
         </div>
       </div>
-      <div class="container" id="buttons" style="text-align: center">
+      <div class="container" id="buttons" style="text-align: left">
+        <p class="h3">Recently Used</p>
         <button type="button" class="btn btn-lg" style="background-color:white;" id = "campusMapButton">
-          <i class="fa fa-map"></i> Campus Map
+          <i class="fa fa-map-marked-alt"></i> Campus Map
         </button>
         <button type="button" class="btn btn-lg" style="background-color:white;" id = "findLecturerButton">
           <i class="fa fa-university"></i> Find my lecturer
@@ -88,6 +89,46 @@
           <i class="fa fa-lungs-virus"></i> COVID-19
         </button>
       </div>
+      <br>
+      <div class="container" id="buttons" style="text-align: left">
+        <p class="h3">Latest News</p>
+        <section class="row clearfix">
+          <div class="col-sm-4">
+            <div class="card">
+              <img class="card-img-top" src="safetyFirst.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">COVID-19 Update</h5>
+                <p>11 Dec 2020</p>
+                <p class="card-text">Please read for an update on case numbers, a reminder on safety measures and what the University is doing to support students in self-isolation.</p>
+                <a href="#" class="btn btn-primary">Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img class="card-img-top" src="wellbeing.jpg" alt="Card image cap">
+              <div class="card-body">
+                <p>08 Dec 2020</p>
+                <h5 class="card-title">Spotlight on accessing Wellbeing Services</h5>
+                <p class="card-text">Now perhaps more than ever, it’s important that we prioritise our mental health. Read Pharmacy student Arj’s story of accessing Wellbeing services at UEA.</p>
+                <a href="#" class="btn btn-primary">Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img class="card-img-top" src="winter.jpg" alt="Card image cap">
+              <div class="card-body">
+                <p>08 Dec 2020</p>
+                <h5 class="card-title">Winter Warmth launch</h5>
+                <p class="card-text">Now perhaps more than ever, it’s important that we prioritise our mental health. Read Pharmacy student Arj’s story of accessing Wellbeing services at UEA.</p>
+                <a href="#" class="btn btn-primary">Read more</a>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="btn btn-primary" style="text-align: center; margin: 10px">View all news</a>
+      </div>
+      
     </main><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
