--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -75,8 +75,14 @@
               <tr>
                 <th scope="col">#</th>
                 <th scope="col"> 
-                    Lecture
-                    <button hidden class="btn btn-info" id ="SortButtonAtoZ" type="button" onclick="sortLectueresAtoZ()">
+     
+                  <!-- THIS NEEDS TO BE CSSED BETTER-->
+                  Lecture
+                  <svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                    </svg>             <input id="TableSearch" style="width: 100px;" type="text" placeholder="Search" aria-label="Search"  onkeyup="fuzzySearchLeacture(this)">
+                     <button hidden class="btn btn-info" id ="SortButtonAtoZ" type="button" onclick="sortLectueresAtoZ()">
                     <svg id ="SortButtonIcon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sort-alpha-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z"/>
                     <path fill-rule="evenodd" d="M6.354 11.146a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L4 12.793l1.646-1.647a.5.5 0 0 1 .708 0z"/>
