Updated nav bar

--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Find My Lecturer</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
 
@@ -59,16 +59,8 @@
 
 
 
-      <div id = "searchdiv" class="form-control mx-sm-3">
-        
-          <svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-        <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-        </svg>
-        <input class="search" id="fuzzySearch" type="text" placeholder="Search" aria-label="Search"  onkeyup="fuzzySearch(this)">
-        <div id="dropDown">
-        </div>
-      </div>
+      <p class="h3">Recently Used</p>
+      
       <div id="FindMyLectureTable" style="text-align: center">
         <table class="table table-hover">
             <thead>
