dark mode toggal working

--- a/Home2.html
+++ b/Home2.html
@@ -15,7 +15,7 @@
     <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="MainStyleSheet.css" rel="stylesheet">
+    <link id="style1" href="MainStyleSheet.css" rel="stylesheet">
 
     <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
     
@@ -94,7 +94,7 @@
         <div id="dropDown2"></div> 
         </div>
         </form>
-        <button class="moonButton" data-toggle="tooltip" data-placment="bottom" title="toggal dark mode" type="button">
+        <button class="moonButton" data-toggle="tooltip" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecss()">
           <i class="fas fa-moon"></i>
           <span></span>
         </button>
@@ -140,6 +140,9 @@
         </button>
       </div>
       <br>
+      <p style="text-align: left; font-size: x-large;">
+      UEA is allways striving to provied the best possible education for our studens, be it acsses to advance softwer and interative learning envrioments or hi-tech lab ecutiment state of the art liberly so this is something we wish to keep to the highest standered poossible for everyone to enjoy.
+      </p>
       <div class="container" id="buttons" style="text-align: left">
         <p class="h3">Latest News</p>
         <section class="row clearfix">
@@ -180,6 +183,38 @@
       </div>
       
     </main><!-- /.container -->
+
+
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>About</h6>
+            <p class="text-justify">This Webist <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+          </div>
+
+          <div class="col-xs-12 col-md-3" style="text-align: right;">
+            <h6>Get In Touch</h6>
+            <ul class="footer-links">
+              <li><a href="">IT Suport</a></li>
+              <li><a href="http://scanfcode.com/category/front-end-development/">ourSiteIncorpated</a></li>
+              <li><a href="http://scanfcode.com/category/back-end-development/">more Links</a></li>
+              <li><a href="http://scanfcode.com/category/java-programming-language/">even more Links</a></li>
+              <li><a href="http://scanfcode.com/category/android/">Request Free Money</a></li>
+              <li><a href="http://scanfcode.com/category/templates/">Give Feedback</a></li>
+            </ul>
+          </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            </p>
+          </div>
+       </div>
+      </div>
+</footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
