--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -99,16 +99,15 @@
 
 
     <main role="main" class="container">
-
-
-
-      <p class="h3">Lecturers</p>
-      
+<P style="font-size: x-large;">
+      Below you can find a tabel which cnontins all the lectuers and members of staff that could be of help to, this also has their email and their office and school. it is also able to search for a indervidal lecture
+</p>
+      <p class="h2" style="text-align: center;">Lecturers</p>
+      <button>show all on one page</button>
       <div id="FindMyLectureTable" style="text-align: center">
         <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">#</th>
                 <th scope="col"> 
      
                   <!-- THIS NEEDS TO BE CSSED BETTER-->
@@ -116,7 +115,8 @@
                   <svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
                     <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                    </svg>             <input id="TableSearch" style="width: 100px;" type="text" placeholder="Search" aria-label="Search"  onkeyup="fuzzySearchLeacture(this)">
+                    </svg>            
+                     <input id="TableSearch" style="width: 100px;" type="text" placeholder="Search" aria-label="Search"  onkeyup="fuzzySearchLeacture(this)">
                      <button hidden class="btn btn-info" id ="SortButtonAtoZ" type="button" onclick="sortLectueresAtoZ()">
                     <svg id ="SortButtonIcon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sort-alpha-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z"/>
@@ -131,7 +131,6 @@
                             <path d="M9.027 7h3.934v-.867h-2.645v-.055l2.567-3.719v-.691H9.098v.867h2.507v.055L9.027 6.309V7zm.637 7l.418-1.371h1.781L12.281 14h1.121l-1.78-5.332h-1.235L8.597 14h1.067zM11 9.687l.652 2.157h-1.351l.652-2.156H11z"/>
                           </svg>
                 </button>
- 
                 </th>
                 <th scope="col">School</th>
                 <th scope="col">Email</th>
@@ -142,7 +141,14 @@
             <tbody id = "TableBody">
            </tbody>
           </table>
-    </div>
+
+          <button>LoadMore</button>
+          <div>
+            <p>
+            Pev<< 2 3 4 5 6 7 8 9 10 ... 120 >>Next
+            </p>
+          </div>
+       </div>
 
     <button hidden type="button" id="test" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
         Launch demo modal
