--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -15,7 +15,11 @@
     <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="MainStyleSheet.css" rel="stylesheet">
+    <link id="style1" href="MainStyleSheet.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
+
+
 
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -81,14 +85,18 @@
           </div>
         </li>
       </ul>
-
+      
         <form class="form-inline my-2 my-lg-0">
          <div id="topSearch">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="navSearch" onkeyup="fuzzySearch2(this)">
         <div id="dropDown2"></div> 
         </div>
         </form>
-        <button class="moonButton" data-toggle="tooltip" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecss()">
+        <button hidden class="sunButton" data-toggle="tooltip" id="sunButton" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecssDark()">
+          <i class="fas fa-sun" style="font-size:24px"></i>
+          <span></span>
+        </button>
+        <button class="moonButton" data-toggle="tooltip" id="moonButton" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecssLight()">
           <i class="fas fa-moon"></i>
           <span></span>
         </button>
