--- a/Home2.html
+++ b/Home2.html
@@ -18,6 +18,8 @@
     <link id="style1" href="MainStyleSheet.css" rel="stylesheet">
 
     <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
+
+    
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -90,7 +92,11 @@
         <div id="dropDown2"></div> 
         </div>
         </form>
-        <button class="moonButton" data-toggle="tooltip" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecss()">
+        <button hidden class="sunButton" data-toggle="tooltip" id="sunButton" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecssDark()">
+          <i class="fas fa-sun" style="font-size:24px"></i>
+          <span></span>
+        </button>
+        <button class="moonButton" data-toggle="tooltip" id="moonButton" data-placment="bottom" title="toggal dark mode" type="button" onclick="togglecssLight()">
           <i class="fas fa-moon"></i>
           <span></span>
         </button>
