fixing the home page

--- a/Home2.html
+++ b/Home2.html
@@ -131,13 +131,13 @@
       </div>
       <div class="container" id="buttons" style="text-align: left">
         <p class="h3">Recently Used</p>
-        <button type="button" class="btn btn-lg" style="background-color:white;" id = "campusMapButton">
+        <button type="button" class="btn btn-lg" id = "campusMapButton">
           <i class="fa fa-map-marked-alt"></i> Campus Map
         </button>
-        <button type="button" class="btn btn-lg" style="background-color:white;" id = "findLecturerButton">
+        <button type="button" class="btn btn-lg"  id = "findLecturerButton">
           <i class="fa fa-university"></i> Find my lecturer
         </button>
-        <button type="button" class="btn btn-lg" style="background-color:white;" id = "covid">
+        <button type="button" class="btn btn-lg" id = "covid">
           <i class="fa fa-lungs-virus"></i> COVID-19
         </button>
       </div>
