--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -199,6 +199,47 @@
    
 </main><!-- /.container -->
 
+
+
+
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">This Webist <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+      </div>
+
+      <div class="col-xs-12 col-md-3" style="text-align: right;">
+        <h6>Get In Touch</h6>
+        <ul class="footer-links">
+          <li><a href="">IT Suport</a></li>
+          <li><a href="http://scanfcode.com/category/front-end-development/">ourSiteIncorpated</a></li>
+          <li><a href="http://scanfcode.com/category/back-end-development/">more Links</a></li>
+          <li><a href="http://scanfcode.com/category/java-programming-language/">even more Links</a></li>
+          <li><a href="http://scanfcode.com/category/android/">Request Free Money</a></li>
+          <li><a href="http://scanfcode.com/category/templates/">Give Feedback</a></li>
+        </ul>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        </p>
+      </div>
+   </div>
+  </div>
+</footer>
+
+
+
+
+
+
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
