very very nearly there

--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -33,7 +33,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="nav-link" href="#"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
+      <a class="nav-link" href="Home2.html"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,7 +59,7 @@
             COVID-19
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-            <a class="dropdown-item" href="#">Book a Test</a>
+            <a class="dropdown-item" href="Covid19.html">Book a Test</a>
             <a class="dropdown-item" href="#">How lateral testing works</a>
             <a class="dropdown-item" href="#">Travelling after testing</a>
             <a class="dropdown-item" href="#">Lateral Testing FAQs</a>
@@ -115,7 +115,7 @@
 <P style="font-size: x-large;">
       Below you can find a tabel which cnontins all the lectuers and members of staff that could be of help to, this also has their email and their office and school. it is also able to search for a indervidal lecture
 </p>
-      <p class="h2" style="text-align: center;">Lecturers</p>
+      <h2 style="text-align: center;">Lecturers</h2>
       <button type="button" class="btn btn-primary"  id = "findLecturerButton">
         Show all items on one page
       </button>
@@ -123,7 +123,7 @@
         <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col"> 
+                <th class="forceWhite" scope="col"> 
      
                   <!-- THIS NEEDS TO BE CSSED BETTER-->
                   Lecture
@@ -147,9 +147,9 @@
                           </svg>
                 </button>
                 </th>
-                <th scope="col">School</th>
-                <th scope="col">Email</th>
-                <th scope="col">Office</th>
+                <th class="forceWhite" scope="col">School</th>
+                <th class="forceWhite" scope="col">Email</th>
+                <th class="forceWhite" scope="col">Office</th>
               </tr>
 
             </thead>
@@ -176,14 +176,14 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">DanSmith</h5>
+              <h5 class="modal-title" class="forceBlack" id="exampleModalLongTitle">DanSmith</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
             <img src="DanSmith.jpg" alt="Dan DanSmith" Align="Left">
-            <p style="text-align: left;">
+            <p class="forceBlack" style="text-align: left;">
             Dan Smith <br>
             CMP <br>
             someemail@yuea.ac.uk <br>
