--- a/Home2.html
+++ b/Home2.html
@@ -33,7 +33,7 @@
     
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="nav-link" href="#"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
+      <a class="nav-link" href="Home2.html"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,7 +59,7 @@
             COVID-19
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-            <a class="dropdown-item" href="#">Book a Test</a>
+            <a class="dropdown-item" href="Covid19.html">Book a Test</a>
             <a class="dropdown-item" href="#">How lateral testing works</a>
             <a class="dropdown-item" href="#">Travelling after testing</a>
             <a class="dropdown-item" href="#">Lateral Testing FAQs</a>
@@ -135,14 +135,14 @@
         </div>
       </div>
       <div class="container" id="buttons" style="text-align: left">
-        <p class="h3">Recently Used</p>
+        <h3>Recently Used</h3>
         <button type="button" class="btn btn-primary" id = "campusMapButton">
           <i class="fa fa-map-marked-alt"></i> Campus Map
         </button>
-        <button type="button" class="btn btn-primary"  id = "findLecturerButton">
+        <button type="button" class="btn btn-primary"  id = "findLecturerButton" onclick="window.location.href='FindMyLecture.html'">
           <i class="fa fa-university"></i> Find my lecturer
         </button>
-        <button type="button" class="btn btn-danger" id = "covid">
+        <button type="button" class="btn btn-danger" id = "covid" onclick="window.location.href='Covid19.html'" >
           <i class="fa fa-lungs-virus"></i> COVID-19
         </button>
       </div>
@@ -151,15 +151,15 @@
       UEA is allways striving to provied the best possible education for our studens, be it acsses to advance softwer and interative learning envrioments or hi-tech lab ecutiment state of the art liberly so this is something we wish to keep to the highest standered poossible for everyone to enjoy.
       </p>
       <div class="container" id="buttons" style="text-align: left">
-        <p class="h3">Latest News</p>
+        <h3>Latest News</h3>
         <section class="row clearfix">
           <div class="col-sm-4">
             <div class="card">
               <img class="card-img-top" src="safetyFirst.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">COVID-19 Update</h5>
-                <p>11 Dec 2020</p>
-                <p class="card-text">Please read for an update on case numbers, a reminder on safety measures and what the University is doing to support students in self-isolation.</p>
+                <h5 style="color: black;" class="card-title">COVID-19 Update</h5>
+                <p style="color: black;">11 Dec 2020</p>
+                <p style="color: black;" class="card-text">Please read for an update on case numbers, a reminder on safety measures and what the University is doing to support students in self-isolation.</p>
                 <a href="#" class="btn btn-primary">Read more</a>
               </div>
             </div>
@@ -168,9 +168,9 @@
             <div class="card">
               <img class="card-img-top" src="wellbeing.jpg" alt="Card image cap">
               <div class="card-body">
-                <p>08 Dec 2020</p>
-                <h5 class="card-title">Spotlight on accessing Wellbeing Services</h5>
-                <p class="card-text">Now perhaps more than ever, it’s important that we prioritise our mental health. Read Pharmacy student Arj’s story of accessing Wellbeing services at UEA.</p>
+                <p style="color:black;">08 Dec 2020</p>
+                <h5 style="color: black;" class="card-title">Spotlight on accessing Wellbeing Services</h5>
+                <p style="color:black" class="card-text">Now perhaps more than ever, it’s important that we prioritise our mental health. Read Pharmacy student Arj’s story of accessing Wellbeing services at UEA.</p>
                 <a href="#" class="btn btn-primary">Read more</a>
               </div>
             </div>
@@ -179,9 +179,9 @@
             <div class="card">
               <img class="card-img-top" src="winter.jpg" alt="Card image cap">
               <div class="card-body">
-                <p>08 Dec 2020</p>
-                <h5 class="card-title">Winter Warmth launch</h5>
-                <p class="card-text">Now perhaps more than ever, it’s important that we prioritise our mental health. Read Pharmacy student Arj’s story of accessing Wellbeing services at UEA.</p>
+                <p style="color: black;">08 Dec 2020</p>
+                <h5 style="color: black;" class="card-title">Winter Warmth launch</h5>
+                <p style="color: black;" class="card-text">Now perhaps more than ever, it’s important that we prioritise our mental health. Read Pharmacy student Arj’s story of accessing Wellbeing services at UEA.</p>
                 <a href="#" class="btn btn-primary">Read more</a>
               </div>
             </div>
