added extra styling

--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -120,7 +120,7 @@
         Show all items on one page
       </button>
       <div id="showAllButton" style="text-align: center">
-        <table class="table table-hover">
+        <table class="table table-hover" id="table">
             <thead>
               <tr>
                 <th class="forceWhite" scope="col"> 
@@ -157,7 +157,7 @@
            </tbody>
           </table>
 
-          <button type="button" class="btn btn-primary"  id = "findLecturerButton">
+          <button type="button" class="btn btn-primary"  id = "loadMore">
             Load More
           </button>
           <div>
