--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -132,14 +132,14 @@
                     <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
                     </svg>            
                      <input id="TableSearch" style="width: 100px;" type="text" placeholder="Search" aria-label="Search"  onkeyup="fuzzySearchLeacture(this)">
-                     <button hidden class="btn btn-info" id ="SortButtonAtoZ" type="button" onclick="sortLectueresAtoZ()">
+                     <button hidden class="btn btn-info" id ="SortButtonAtoZ" type="button" alt="sort" onclick="sortLectueresAtoZ()">
                     <svg id ="SortButtonIcon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sort-alpha-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z"/>
                     <path fill-rule="evenodd" d="M6.354 11.146a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L4 12.793l1.646-1.647a.5.5 0 0 1 .708 0z"/>
                     <path id = "SortButtonPath" d="M9.664 7l.418-1.371h1.781L12.281 7h1.121l-1.78-5.332h-1.235L8.597 7h1.067zM11 2.687l.652 2.157h-1.351l.652-2.157H11zM9.027 14h3.934v-.867h-2.645v-.055l2.567-3.719v-.691H9.098v.867h2.507v.055l-2.578 3.719V14z"/>
                     </svg> 
                 </button>
-                    <button class="btn btn-info" id ="SortButtonZtoA" type="button" onclick="sortLectueresZtoA()">
+                    <button class="btn btn-info" id ="SortButtonZtoA" type="button" alt="sort" onclick="sortLectueresZtoA()">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sort-alpha-down-alt" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z"/>
                             <path fill-rule="evenodd" d="M6.354 11.146a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L4 12.793l1.646-1.647a.5.5 0 0 1 .708 0z"/>
