--- a/FindMyLecture.html
+++ b/FindMyLecture.html
@@ -113,7 +113,7 @@
 
     <main role="main" class="container">
 <P style="font-size: x-large;">
-      Below you can find a table which contains all the lecturers and members of staff that could be of help, this also has their email and their office and school. It is also able to search for a individual lecturers
+      Below you can find a table which contains all the lecturers and members of staff that could be of help, this also has their email and their office and school. It is also able to search for a individual lecturers.
 </p>
       <h2 style="text-align: center;">Lecturers</h2>
       <button type="button" class="btn btn-primary"  id = "findLecturerButton">
